testdata/typechecker/ok/NestedVars1.java
int main() {
        {
            int x;
            x = 5;
        }
        int x;
        x = 4;
        printInt(x);
    	return 0;
}

