testdata/typechecker/error/BinopTest-err3.java
int main() {
            int x;
            x = 5 * false; // TE
		return 0;
}

